Issues align reinforcement
With Redmine 2.6 Issues listed in roadmap view are centered. CSS is
reinforced for left align

--- a/assets/stylesheets/advanced_roadmap.css
+++ b/assets/stylesheets/advanced_roadmap.css
@@ -34,3 +34,6 @@ div.tooltip:hover span.tip {
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 0 5px;
 }
+table.related-issues > tbody > tr > td:nth-child(2) {
+    text-align: left;
+}
